[package]
name = "serde-bench"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
"serde" = "1"
"serde_derive" = "1"

"byteorder" = "1"
"rmp" = "0.8"
"rmp-serde" = "0.13"
"bincode" = "1"
"serde_json" = "1"
"prost" = "0.4"
"prost-derive" = "0.4"
"bytes" = "0.4"
"serde-pickle" = "0.4"
"serde-xdr" = "0.5"
"serde_cbor" = "0.9"

"speedy" = "0.4"
"speedy-derive" = "0.3"

[profile.release]
lto = true
panic = "abort"

[profile.bench]
lto = true
