[package]
name = "serde-bench"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
"serde" = "1"
"serde_derive" = "1"

"byteorder" = "1"
"rmp" = "0.8"
"rmp-serde" = "0.15"
"bincode" = "1"
"serde_json" = "1"
"prost" = "0.6"
"prost-derive" = "0.6"
"bytes" = "1"
"serde-pickle" = "0.6"
"serde-xdr" = "0.6"
"serde_cbor" = "0.11"

"speedy" = "0.7"
"speedy-derive" = "0.7"

[profile.release]
lto = true
panic = "abort"

[profile.bench]
lto = true
