[package]
name = "serde-bench"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2021"

[dependencies]
"serde" = "1.0.136"
"serde_derive" = "1.0.136"
"byteorder" = "1.4.3"
"rmp" = "0.8.10"
"rmp-serde" = "1.0.0"
"bincode" = "1.3.3"
"serde_json" = "1.0.79"
"prost" = "0.9.0"
"prost-derive" = "0.9.0"
"bytes" = "1.1.0"
"serde-pickle" = "1.1.0"
"serde-xdr" = "0.6.0"
"serde_cbor" = "0.11.2"
#"speedy" = "0.8.1"
"speedy" = { path = "../speedy", features = ["box"] }

[profile.release]
lto = true
panic = "abort"

[profile.bench]
lto = true
